--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -6,16 +6,30 @@
       "timestamp": "📅 July 2020"
     }
   },
+  "notFound": {
+    "message": "Page was not found. Sorry."
+  },
   "action": {
     "addEvent": "create event",
-    "delete": "delete"
+    "delete": "delete",
+    "goHome": "go to the homescreen",
+    "showPastEvent": "show past events"
   },
   "events": {
     "list": {
+      "pageTitle": {
+        "ongoing": "Ongoing Events",
+        "upcoming": "Upcoming Events",
+        "ongoingUpcoming": "Ongoing & Upcoming Events",
+        "past": "Past Events"
+      },
       "loading": "Loading events...",
       "updating": "Updating events...",
       "error": "Failed to load events. Error: {{message}}",
-      "emptyUpcoming": "There are no upcoming events."
+      "empty": {
+        "upcoming": "There are no upcoming events.",
+        "past": "There are no past events."
+      }
     }
   }
 }
