--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -77,5 +77,13 @@
     "minute_plural": "{{count}} minutes",
     "hour": "1 hour",
     "hour_plural": "{{count}} hours"
+  },
+  "validation": {
+    "couldNotSave": "Could not save because some fields are invalid.",
+    "type": {
+      "no-empty": "field can not be empty",
+      "required": "field is required",
+      "invalid": "value is invalid"
+    }
   }
 }
