fixed tests + many small improvements

--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -3,7 +3,7 @@
     "title": "evenTz",
     "footer": {
       "mainNote": "Created with ❤️ by Matej Budzel as an interview assignment.",
-      "timestamp": "📅 July 2020"
+      "timestamp": "July 2020"
     }
   },
   "notFound": {
